--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,35 +1,31 @@
+# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
+
 name: Node.js CI
 
-on: [pull_request]
+on:
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
+
     runs-on: ${{ matrix.os }}
+
     strategy:
       matrix:
         os: [windows-latest, macos-latest, ubuntu-latest]
         node-version: [14.x, 16.x, 18.x]
-        
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
     steps:
-    - uses: actions/checkout@v2
-    
+    - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    
     - run: npm ci
-    
     - run: npm run build --if-present
-    
     - run: npm test
-      continue-on-error: true # Esto evitará que el flujo de trabajo falle si las pruebas no pasan
-    
-    - name: Check test results and prevent merge if tests fail
-      run: |
-        if [ ${{ success() }} == 'false' ]; then
-          echo "Tests failed. This pull request cannot be merged."
-          exit 1
-        fi
-      if: failure() # Esto asegura que este paso solo se ejecute si las pruebas fallan
